// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "apiVersion": undefined,
  "host": Object {
    "headers": undefined,
    "host": null,
    "path": null,
    "port": null,
    "protocol": null,
    "query": null,
  },
  "keepAlive": true,
  "logQueries": undefined,
  "pingTimeout": undefined,
  "requestTimeout": undefined,
  "username": undefined,
}
`;

exports[`creates elasticsearch client config when shouldAuth is true by default (for data clients) 1`] = `
Object {
  "apiVersion": undefined,
  "host": Object {
    "auth": "foo:bar",
    "headers": undefined,
    "host": null,
    "path": null,
    "port": null,
    "protocol": null,
    "query": null,
  },
  "keepAlive": true,
  "logQueries": undefined,
  "pingTimeout": undefined,
  "requestTimeout": undefined,
  "username": "foo",
}
`;
